--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -22,9 +22,12 @@ tauri = { version = "2", features = [] }
 tauri-plugin-opener = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-# bollard = "0.17"
-# tokio = { version = "1.0", features = ["full"] }
-# futures-util = "0.3"
-# thiserror = "1.0"
-# chrono = { version = "0.4", features = ["serde"] }
+bollard = "0.17"
+tokio = { version = "1.0", features = ["full"] }
+futures-util = "0.3"
+thiserror = "1.0"
+chrono = { version = "0.4", features = ["serde"] }
+tracing = "0.1"
+tracing-subscriber = "0.3"
+lazy_static = "1.4"
 
