--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tailwindcss/vite": "^4.1.10",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-opener": "^2",
+    "bits-ui": "^2.8.0",
     "chart.js": "^4.4.9",
     "chartjs-adapter-date-fns": "^3.0.0",
     "lucide-svelte": "^0.515.0",
@@ -24,6 +25,7 @@
     "tailwindcss": "^4.1.10"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.9.4",
     "@internationalized/date": "^3.8.1",
     "@lucide/svelte": "^0.515.0",
     "@sveltejs/adapter-static": "^3.0.6",
@@ -32,7 +34,6 @@
     "@tanstack/table-core": "^8.20.5",
     "@tauri-apps/cli": "^2",
     "@types/node": "^24.0.1",
-    "bits-ui": "^2.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-svelte": "^8.6.0",
     "formsnap": "^2.0.1",
